<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageTop"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageTop"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textTitleInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name" />

            <EditText
                android:id="@+id/edittextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_name_input"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageTop"
            app:layout_constraintTop_toBottomOf="@+id/cardViewName">

            <TextView
                android:id="@+id/textAuthorInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_author" />

            <EditText
                android:id="@+id/edittextAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_author_input"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageTop"
            app:layout_constraintTop_toBottomOf="@+id/cardViewAuthor">

            <TextView
                android:id="@+id/textRankInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_rank" />

            <EditText
                android:id="@+id/edittextRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_rank_input"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageTop">

            <TextView
                android:id="@+id/textYearInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_year" />

            <EditText
                android:id="@+id/edittextYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_year_input"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewYear">

            <TextView
                android:id="@+id/textPressInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_press" />

            <EditText
                android:id="@+id/edittextPress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_press_input"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIsbn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewPress">

            <TextView
                android:id="@+id/textIsbnInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_isbn" />

            <EditText
                android:id="@+id/edittextIsbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_isbn_input"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewImageUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewIsbn">

            <TextView
                android:id="@+id/textImageUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_url" />

            <EditText
                android:id="@+id/edittextImageUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_url_input"
                android:importantForAutofill="no"
                android:inputType="textUri"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewImageUrl">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>